Fix a bug on the homepage for tablette: accroche not centered

--- a/src/Mcneude/PortfolioBundle/Resources/public/less/home.less
+++ b/src/Mcneude/PortfolioBundle/Resources/public/less/home.less
@@ -70,6 +70,9 @@
                 width: 70%;
                 margin: 1em 15%;
             }
+            .accroche{
+                width: auto;
+            }
             > img{
                 width: 100%;
                 margin: 0;
